<resources>
    <string name="app_name">MobileApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign__up">Sign_Up</string>
    <string name="title_activity_home">Home</string>

    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login">LOGIN</string>
    <string name="no_account">Dont have an account? Sign Up Here</string>
    <string name="signup">SIGN UP</string>

    <string name="signup_firstname">Firstname</string>
    <string name="signup_lastname">Lastname</string>
    <string name="signup_email">Email</string>
    <string name="signup_phone">PhoneNumber</string>
    <string name="signup_password">Enter password</string>
    <string name="signup_confirmPass">Confirm password</string>
    <string name="submit">SUBMIT</string>

    <string name="welcome">WELCOME HOME</string>

</resources>
